--- a/app/_styles/globals.scss
+++ b/app/_styles/globals.scss
@@ -105,7 +105,7 @@ details summary::-webkit-details-marker {
 .page-intro__title {
   font-family: var(--font-display);
   font-weight: 500;
-  font-size: clamp(2.6rem, 11vw, 14rem);
+  font-size: clamp(2.6rem, 15vw, 10rem);
   line-height: 0.85;
   text-transform: uppercase;
   margin: 0;
